--- a/BS/BS/Classes/Publish-发布/Controller/DZYPublishViewController.xib
+++ b/BS/BS/Classes/Publish-发布/Controller/DZYPublishViewController.xib
@@ -10,7 +10,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view userInteractionEnabled="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -30,6 +30,9 @@
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <accessibility key="accessibilityConfiguration">
+                <accessibilityTraits key="traits" none="YES" image="YES"/>
+            </accessibility>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="eF9-D3-Zgv" secondAttribute="bottom" constant="40" id="DYg-E7-lE9"/>
                 <constraint firstAttribute="centerX" secondItem="eF9-D3-Zgv" secondAttribute="centerX" id="ImE-m7-y8T"/>
