--- a/BS/BS/Classes/Publish-发布/View/DZYPostWordToolbar.xib
+++ b/BS/BS/Classes/Publish-发布/View/DZYPostWordToolbar.xib
@@ -10,26 +10,35 @@
             <rect key="frame" x="0.0" y="5" width="388" height="117"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SB2-2O-rMX" userLabel="顶部">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D4h-kB-zq0" userLabel="顶部">
+                    <rect key="frame" x="5" y="0.0" width="378" height="60"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="wO2-m8-eoA"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CWw-0R-gdN" userLabel="底部">
                     <rect key="frame" x="0.0" y="82" width="388" height="35"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tabbar-light" translatesAutoresizingMaskIntoConstraints="NO" id="jNh-n9-505">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tabbar-light" translatesAutoresizingMaskIntoConstraints="NO" id="ScH-2f-hFO">
                             <rect key="frame" x="0.0" y="0.0" width="388" height="35"/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dEV-zy-FB8">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kfh-2d-KKh">
                             <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="35" id="22Z-GI-lCx"/>
+                                <constraint firstAttribute="width" constant="35" id="20c-70-ddP"/>
+                                <constraint firstAttribute="height" constant="35" id="afD-qY-GT7"/>
                             </constraints>
                             <state key="normal" image="post-@N">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <state key="highlighted" image="post-@"/>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c25-zu-0eH">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dyg-Ps-714">
                             <rect key="frame" x="35" y="0.0" width="35" height="35"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="35" id="0E6-xV-v1e"/>
+                                <constraint firstAttribute="height" constant="35" id="IwF-HK-AwM"/>
+                                <constraint firstAttribute="width" constant="35" id="OWD-qe-0qR"/>
                             </constraints>
                             <state key="normal" image="post-#N">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -39,40 +48,33 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="jNh-n9-505" firstAttribute="top" secondItem="SB2-2O-rMX" secondAttribute="top" id="95f-rP-aiV"/>
-                        <constraint firstAttribute="bottom" secondItem="jNh-n9-505" secondAttribute="bottom" id="Cbb-Ck-gNa"/>
-                        <constraint firstItem="c25-zu-0eH" firstAttribute="leading" secondItem="dEV-zy-FB8" secondAttribute="trailing" id="Gg2-d3-ays"/>
-                        <constraint firstAttribute="height" constant="35" id="Hap-5R-Bvh"/>
-                        <constraint firstItem="dEV-zy-FB8" firstAttribute="bottom" secondItem="c25-zu-0eH" secondAttribute="bottom" id="S78-RS-0op"/>
-                        <constraint firstItem="dEV-zy-FB8" firstAttribute="leading" secondItem="SB2-2O-rMX" secondAttribute="leading" id="a3U-Y3-8o0"/>
-                        <constraint firstAttribute="bottom" secondItem="dEV-zy-FB8" secondAttribute="bottom" id="awE-Wn-rd7"/>
-                        <constraint firstAttribute="trailing" secondItem="jNh-n9-505" secondAttribute="trailing" id="hGF-WF-iEs"/>
-                        <constraint firstItem="jNh-n9-505" firstAttribute="leading" secondItem="SB2-2O-rMX" secondAttribute="leading" id="nXB-UQ-tr3"/>
-                        <constraint firstItem="dEV-zy-FB8" firstAttribute="top" secondItem="c25-zu-0eH" secondAttribute="top" id="qrV-qc-gLs"/>
-                        <constraint firstItem="dEV-zy-FB8" firstAttribute="top" secondItem="SB2-2O-rMX" secondAttribute="top" id="vEO-6K-rST"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vhw-Lz-U88" userLabel="底部">
-                    <rect key="frame" x="0.0" y="0.0" width="388" height="60"/>
-                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="60" id="uxF-Ta-3i5"/>
+                        <constraint firstItem="dyg-Ps-714" firstAttribute="bottom" secondItem="kfh-2d-KKh" secondAttribute="bottom" id="3fQ-6l-hHW"/>
+                        <constraint firstItem="dyg-Ps-714" firstAttribute="top" secondItem="kfh-2d-KKh" secondAttribute="top" id="5c6-e3-5IP"/>
+                        <constraint firstItem="ScH-2f-hFO" firstAttribute="leading" secondItem="CWw-0R-gdN" secondAttribute="leading" id="5vi-Gt-2EC"/>
+                        <constraint firstItem="kfh-2d-KKh" firstAttribute="top" secondItem="CWw-0R-gdN" secondAttribute="top" id="84O-Sm-ZJJ"/>
+                        <constraint firstItem="ScH-2f-hFO" firstAttribute="top" secondItem="CWw-0R-gdN" secondAttribute="top" id="8ly-lb-1Ca"/>
+                        <constraint firstAttribute="bottom" secondItem="kfh-2d-KKh" secondAttribute="bottom" id="EJi-h9-VaQ"/>
+                        <constraint firstAttribute="height" constant="35" id="SJH-R6-Ada"/>
+                        <constraint firstItem="kfh-2d-KKh" firstAttribute="leading" secondItem="CWw-0R-gdN" secondAttribute="leading" id="XuH-5o-ona"/>
+                        <constraint firstItem="dyg-Ps-714" firstAttribute="leading" secondItem="kfh-2d-KKh" secondAttribute="trailing" id="iNx-qN-3nH"/>
+                        <constraint firstAttribute="trailing" secondItem="ScH-2f-hFO" secondAttribute="trailing" id="l9k-XY-WRJ"/>
+                        <constraint firstAttribute="bottom" secondItem="ScH-2f-hFO" secondAttribute="bottom" id="t2L-Rw-XLX"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="vhw-Lz-U88" secondAttribute="trailing" id="Nr9-Eb-nHD"/>
-                <constraint firstItem="vhw-Lz-U88" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Top-PW-dma"/>
-                <constraint firstAttribute="bottom" secondItem="SB2-2O-rMX" secondAttribute="bottom" id="TvZ-FQ-Vxf"/>
-                <constraint firstItem="vhw-Lz-U88" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="XvE-2T-oJ5"/>
-                <constraint firstItem="SB2-2O-rMX" firstAttribute="trailing" secondItem="vhw-Lz-U88" secondAttribute="trailing" id="jGg-U7-iHT"/>
-                <constraint firstItem="SB2-2O-rMX" firstAttribute="leading" secondItem="vhw-Lz-U88" secondAttribute="leading" id="oKq-u0-pdg"/>
+                <constraint firstAttribute="trailing" secondItem="CWw-0R-gdN" secondAttribute="trailing" id="5o6-Yc-g57"/>
+                <constraint firstItem="D4h-kB-zq0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="976-ku-x4f"/>
+                <constraint firstAttribute="trailing" secondItem="D4h-kB-zq0" secondAttribute="trailing" constant="5" id="ePH-g5-Wvr"/>
+                <constraint firstItem="D4h-kB-zq0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="iDc-Sb-QVf"/>
+                <constraint firstItem="CWw-0R-gdN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="jdY-GA-yEM"/>
+                <constraint firstAttribute="bottom" secondItem="CWw-0R-gdN" secondAttribute="bottom" id="lNN-un-UYG"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="topView" destination="vhw-Lz-U88" id="h0W-zD-OlE"/>
+                <outlet property="topView" destination="D4h-kB-zq0" id="scb-yf-zCS"/>
             </connections>
             <point key="canvasLocation" x="232" y="266.5"/>
         </view>
