--- a/BS/BS/Classes/Essence-精华/View/DZYTopicCell.xib
+++ b/BS/BS/Classes/Essence-精华/View/DZYTopicCell.xib
@@ -42,6 +42,9 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <state key="highlighted" image="cellmorebtnclick"/>
+                        <connections>
+                            <action selector="moreClick" destination="KGk-i7-Jjw" eventType="touchUpInside" id="S1f-3v-EgX"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vah-7E-smq">
                         <rect key="frame" x="10" y="58" width="295" height="18"/>
@@ -49,12 +52,121 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddr-8g-faW" userLabel="底部工具条">
+                        <rect key="frame" x="0.0" y="143" width="315" height="35"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-content-line" translatesAutoresizingMaskIntoConstraints="NO" id="ELS-P8-2VG" userLabel="顶部分隔线">
+                                <rect key="frame" x="0.0" y="0.0" width="315" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="TIZ-qb-zCL"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eyb-MS-VWp">
+                                <rect key="frame" x="0.0" y="0.0" width="79" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                <state key="normal" title="顶" image="mainCellDing">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="mainCellDingClick"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eAP-XM-6Xh" userLabel="踩">
+                                <rect key="frame" x="79" y="0.0" width="78.5" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                <state key="normal" title="踩" image="mainCellCai">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="mainCellCaiClick"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sz5-fX-DLe" userLabel="分享">
+                                <rect key="frame" x="157" y="0.0" width="79" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                <state key="normal" title="分享" image="mainCellShare">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="mainCellShareClick"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fIO-sL-rTa" userLabel="评论">
+                                <rect key="frame" x="236" y="0.0" width="78.5" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                <state key="normal" title="评论" image="mainCellComment">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="mainCellCommentClick"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-button-line" translatesAutoresizingMaskIntoConstraints="NO" id="YdL-w6-WcU">
+                                <rect key="frame" x="80" y="1" width="1" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1" id="boJ-4L-gA4"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-button-line" translatesAutoresizingMaskIntoConstraints="NO" id="wzy-0j-VNr">
+                                <rect key="frame" x="236" y="0.0" width="1" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1" id="977-2Z-n7W"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="1" id="NrO-HI-GMX"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-button-line" translatesAutoresizingMaskIntoConstraints="NO" id="CaA-Uv-u07">
+                                <rect key="frame" x="157" y="0.0" width="1" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1" id="J28-59-8Jg"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="1" id="hoL-X8-65q"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="fIO-sL-rTa" secondAttribute="bottom" id="04p-FV-Nia"/>
+                            <constraint firstItem="fIO-sL-rTa" firstAttribute="width" secondItem="eyb-MS-VWp" secondAttribute="width" id="3hI-Jy-Gy7"/>
+                            <constraint firstItem="eyb-MS-VWp" firstAttribute="leading" secondItem="ddr-8g-faW" secondAttribute="leading" id="7PX-dT-MuP"/>
+                            <constraint firstItem="eAP-XM-6Xh" firstAttribute="top" secondItem="ddr-8g-faW" secondAttribute="top" id="F4Z-e3-hkZ"/>
+                            <constraint firstItem="Sz5-fX-DLe" firstAttribute="top" secondItem="ddr-8g-faW" secondAttribute="top" id="HGI-qj-z71"/>
+                            <constraint firstItem="ELS-P8-2VG" firstAttribute="leading" secondItem="ddr-8g-faW" secondAttribute="leading" id="Lsk-1N-Dfa"/>
+                            <constraint firstItem="wzy-0j-VNr" firstAttribute="top" secondItem="ddr-8g-faW" secondAttribute="top" id="M1E-fB-B29"/>
+                            <constraint firstAttribute="bottom" secondItem="YdL-w6-WcU" secondAttribute="bottom" id="Nh7-qT-jZH"/>
+                            <constraint firstItem="YdL-w6-WcU" firstAttribute="leading" secondItem="eyb-MS-VWp" secondAttribute="trailing" constant="1" id="PCJ-ut-jhF"/>
+                            <constraint firstItem="fIO-sL-rTa" firstAttribute="leading" secondItem="Sz5-fX-DLe" secondAttribute="trailing" id="Pnz-mI-Xoa"/>
+                            <constraint firstItem="YdL-w6-WcU" firstAttribute="top" secondItem="ELS-P8-2VG" secondAttribute="bottom" id="QbK-ni-LCN"/>
+                            <constraint firstAttribute="bottom" secondItem="Sz5-fX-DLe" secondAttribute="bottom" id="Su6-el-NTr"/>
+                            <constraint firstAttribute="trailing" secondItem="fIO-sL-rTa" secondAttribute="trailing" id="Te9-Ma-2SM"/>
+                            <constraint firstAttribute="bottom" secondItem="CaA-Uv-u07" secondAttribute="bottom" id="UjM-Zl-MXa"/>
+                            <constraint firstItem="fIO-sL-rTa" firstAttribute="width" secondItem="Sz5-fX-DLe" secondAttribute="width" id="XAe-mA-pmF"/>
+                            <constraint firstAttribute="trailing" secondItem="ELS-P8-2VG" secondAttribute="trailing" id="aRf-9J-2o1"/>
+                            <constraint firstAttribute="bottom" secondItem="eyb-MS-VWp" secondAttribute="bottom" id="dms-fj-JEJ"/>
+                            <constraint firstItem="ELS-P8-2VG" firstAttribute="top" secondItem="ddr-8g-faW" secondAttribute="top" id="fhk-My-A5U"/>
+                            <constraint firstItem="fIO-sL-rTa" firstAttribute="top" secondItem="ddr-8g-faW" secondAttribute="top" id="gIX-kg-Elr"/>
+                            <constraint firstItem="eAP-XM-6Xh" firstAttribute="leading" secondItem="eyb-MS-VWp" secondAttribute="trailing" id="gQK-be-WaE"/>
+                            <constraint firstAttribute="bottom" secondItem="wzy-0j-VNr" secondAttribute="bottom" id="kjt-Au-6yK"/>
+                            <constraint firstAttribute="bottom" secondItem="eAP-XM-6Xh" secondAttribute="bottom" id="nX5-rY-goH"/>
+                            <constraint firstItem="CaA-Uv-u07" firstAttribute="leading" secondItem="eAP-XM-6Xh" secondAttribute="trailing" id="nhl-Wj-18d"/>
+                            <constraint firstItem="Sz5-fX-DLe" firstAttribute="leading" secondItem="eAP-XM-6Xh" secondAttribute="trailing" id="p4i-qe-7ge"/>
+                            <constraint firstAttribute="height" constant="35" id="qUb-Ni-xsx"/>
+                            <constraint firstItem="wzy-0j-VNr" firstAttribute="leading" secondItem="Sz5-fX-DLe" secondAttribute="trailing" id="qjB-7i-KfW"/>
+                            <constraint firstItem="fIO-sL-rTa" firstAttribute="width" secondItem="eAP-XM-6Xh" secondAttribute="width" id="vbp-Rb-Ofe"/>
+                            <constraint firstItem="CaA-Uv-u07" firstAttribute="top" secondItem="ddr-8g-faW" secondAttribute="top" id="wQ0-0X-4Ck"/>
+                            <constraint firstItem="eyb-MS-VWp" firstAttribute="top" secondItem="ddr-8g-faW" secondAttribute="top" id="yMa-b9-rNZ"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="3qB-WZ-dTN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="3tb-af-6ry"/>
+                    <constraint firstItem="ddr-8g-faW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="73b-b9-xXD"/>
+                    <constraint firstAttribute="bottom" secondItem="ddr-8g-faW" secondAttribute="bottom" id="9Ox-6b-RhV"/>
                     <constraint firstItem="Ciw-AH-GHl" firstAttribute="leading" secondItem="3qB-WZ-dTN" secondAttribute="trailing" constant="10" id="9WF-BD-UCV"/>
                     <constraint firstItem="vah-7E-smq" firstAttribute="top" secondItem="3qB-WZ-dTN" secondAttribute="bottom" constant="13" id="9bI-OQ-Ixe"/>
                     <constraint firstItem="H4u-oq-gnj" firstAttribute="leading" secondItem="Ciw-AH-GHl" secondAttribute="leading" id="D86-Yi-wbb"/>
+                    <constraint firstAttribute="trailing" secondItem="ddr-8g-faW" secondAttribute="trailing" id="LEJ-iL-52D"/>
                     <constraint firstItem="NuN-Bk-Gi9" firstAttribute="trailing" secondItem="vah-7E-smq" secondAttribute="trailing" id="Wx1-P5-m97"/>
                     <constraint firstItem="3qB-WZ-dTN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ZIp-Bs-Eyh"/>
                     <constraint firstItem="NuN-Bk-Gi9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="dXT-x7-J1b"/>
@@ -65,16 +177,30 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="caiButton" destination="eAP-XM-6Xh" id="C71-XW-GBI"/>
+                <outlet property="commentButton" destination="fIO-sL-rTa" id="5Jc-PM-r2I"/>
                 <outlet property="createdAtLabel" destination="H4u-oq-gnj" id="i2E-Ud-aAy"/>
+                <outlet property="dingButton" destination="eyb-MS-VWp" id="JFG-Dl-6oC"/>
                 <outlet property="nameLabel" destination="Ciw-AH-GHl" id="eBf-Xm-bBP"/>
                 <outlet property="profileImageView" destination="3qB-WZ-dTN" id="O00-rY-dX9"/>
+                <outlet property="repostButton" destination="Sz5-fX-DLe" id="xZ9-00-BMD"/>
                 <outlet property="text_label" destination="vah-7E-smq" id="dit-Hq-cFn"/>
             </connections>
             <point key="canvasLocation" x="200.5" y="307.5"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="cell-button-line" width="1" height="29"/>
+        <image name="cell-content-line" width="299" height="1"/>
         <image name="cellmorebtnclick" width="24" height="20"/>
         <image name="cellmorebtnnormal" width="24" height="20"/>
+        <image name="mainCellCai" width="20" height="20"/>
+        <image name="mainCellCaiClick" width="20" height="20"/>
+        <image name="mainCellComment" width="20" height="20"/>
+        <image name="mainCellCommentClick" width="20" height="20"/>
+        <image name="mainCellDing" width="20" height="20"/>
+        <image name="mainCellDingClick" width="20" height="20"/>
+        <image name="mainCellShare" width="20" height="20"/>
+        <image name="mainCellShareClick" width="23" height="23"/>
     </resources>
 </document>
