--- a/BS/BS/Classes/Essence-精华/View/DZYTopicPictureView.xib
+++ b/BS/BS/Classes/Essence-精华/View/DZYTopicPictureView.xib
@@ -10,6 +10,12 @@
             <rect key="frame" x="0.0" y="-1" width="292" height="231"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageBackground" translatesAutoresizingMaskIntoConstraints="NO" id="ku2-Lu-Lgr" userLabel="占位图片">
+                    <rect key="frame" x="0.0" y="20" width="292" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="BvN-eV-tVg"/>
+                    </constraints>
+                </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wee-zu-b7o">
                     <rect key="frame" x="0.0" y="0.0" width="292" height="231"/>
                 </imageView>
@@ -32,26 +38,46 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7qz-Km-CCi" customClass="DALabeledCircularProgressView">
+                    <rect key="frame" x="96" y="65.5" width="100" height="100"/>
+                    <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="bbQ-ip-Os8"/>
+                        <constraint firstAttribute="width" constant="100" id="yQZ-Nh-fJw"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="wee-zu-b7o" secondAttribute="bottom" id="1MU-hg-PGK"/>
+                <constraint firstItem="ku2-Lu-Lgr" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="CAh-eg-MMZ"/>
                 <constraint firstAttribute="bottom" secondItem="aSn-KA-STH" secondAttribute="bottom" id="Hhi-XY-Iwt"/>
                 <constraint firstItem="aSn-KA-STH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="MJP-oh-JCN"/>
                 <constraint firstAttribute="trailing" secondItem="aSn-KA-STH" secondAttribute="trailing" id="RsY-sW-ADJ"/>
                 <constraint firstItem="wee-zu-b7o" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="VkF-gB-Dgr"/>
+                <constraint firstAttribute="trailing" secondItem="ku2-Lu-Lgr" secondAttribute="trailing" id="XgJ-LU-DRU"/>
                 <constraint firstItem="yK1-fj-hBK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fEr-og-v1G"/>
+                <constraint firstItem="ku2-Lu-Lgr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="geI-Dn-Ofp"/>
+                <constraint firstAttribute="centerX" secondItem="7qz-Km-CCi" secondAttribute="centerX" id="h1N-lS-7JT"/>
                 <constraint firstAttribute="trailing" secondItem="wee-zu-b7o" secondAttribute="trailing" id="k3b-YI-CIk"/>
+                <constraint firstAttribute="centerY" secondItem="7qz-Km-CCi" secondAttribute="centerY" id="r6I-gg-Qcp"/>
                 <constraint firstItem="yK1-fj-hBK" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="sT5-qw-lLo"/>
                 <constraint firstItem="wee-zu-b7o" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="uKk-Qy-t9C"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="gifView" destination="yK1-fj-hBK" id="5RC-cy-1xO"/>
+                <outlet property="imageView" destination="wee-zu-b7o" id="o5J-lj-C9D"/>
+                <outlet property="progressView" destination="7qz-Km-CCi" id="NA6-SE-3yS"/>
+                <outlet property="seeBigPictureButton" destination="aSn-KA-STH" id="JAz-3G-iS9"/>
+            </connections>
             <point key="canvasLocation" x="385" y="157.5"/>
         </view>
     </objects>
     <resources>
         <image name="common-gif" width="31" height="31"/>
+        <image name="imageBackground" width="75" height="15"/>
         <image name="see-big-picture" width="19" height="19"/>
         <image name="see-big-picture-background" width="285" height="43"/>
     </resources>
