--- a/BS/BS/Classes/Essence-精华/View/DZYTopicPictureView.xib
+++ b/BS/BS/Classes/Essence-精华/View/DZYTopicPictureView.xib
@@ -26,7 +26,7 @@
                         <constraint firstAttribute="height" constant="31" id="aoP-LQ-DqY"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSn-KA-STH">
+                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSn-KA-STH">
                     <rect key="frame" x="0.0" y="188" width="292" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="8YH-0y-mJT"/>
