--- a/BS/BS/Classes/FriendTrends-关注/View/DZYCategoryCell.xib
+++ b/BS/BS/Classes/FriendTrends-关注/View/DZYCategoryCell.xib
@@ -13,11 +13,34 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AN5-Lv-r3U">
-                        <rect key="frame" x="8" y="6" width="51" height="31"/>
-                    </switch>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LVm-18-5Nq" userLabel="分隔线">
+                        <rect key="frame" x="0.0" y="42.5" width="320" height="1"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="a4B-DI-Aas"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o1b-PM-yHe" userLabel="左边选中的指示器">
+                        <rect key="frame" x="0.0" y="0.0" width="5" height="42.5"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="5" id="eRl-pE-d5x"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="o1b-PM-yHe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PGT-mv-xbw"/>
+                    <constraint firstAttribute="bottom" secondItem="LVm-18-5Nq" secondAttribute="bottom" id="VPu-ff-bxz"/>
+                    <constraint firstItem="LVm-18-5Nq" firstAttribute="top" secondItem="o1b-PM-yHe" secondAttribute="bottom" id="W9D-NG-Uvr"/>
+                    <constraint firstAttribute="trailing" secondItem="LVm-18-5Nq" secondAttribute="trailing" id="adc-NX-t23"/>
+                    <constraint firstItem="o1b-PM-yHe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="s3k-Ye-pdE"/>
+                    <constraint firstItem="LVm-18-5Nq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="xdF-4y-7Oq"/>
+                </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+            <connections>
+                <outlet property="selectedIndicator" destination="o1b-PM-yHe" id="NiL-mn-VjI"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
