--- a/BS/BS/Classes/FriendTrends-关注/View/DZYUserCell.xib
+++ b/BS/BS/Classes/FriendTrends-关注/View/DZYUserCell.xib
@@ -47,7 +47,7 @@
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qt7-rB-mAn" userLabel="分割线">
+                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qt7-rB-mAn" userLabel="分割线">
                         <rect key="frame" x="0.0" y="81.5" width="335" height="1"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
